--- a/frontend/owcompare/package.json
+++ b/frontend/owcompare/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.3.2",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.2.2"
   },
