--- a/frontend/owcompare/package.json
+++ b/frontend/owcompare/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-prettier": "^2.6.0",
+    "prettier": "^1.13.5",
+    "prop-types": "^15.6.1",
     "react": "^16.4.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.4.0",
@@ -18,11 +23,11 @@
   },
   "devDependencies": {
     "autoprefixer-stylus": "^0.14.0",
-    "babel-eslint": "^8.2.3",
+    "babel-eslint": "^7.2.3",
     "concurrently": "^3.5.1",
     "eslint": "^4.19.1",
     "eslint-plugin-flowtype": "^2.46.3",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.7.0",
     "nib": "^1.1.2",
     "react-scripts": "^1.1.4",
