--- a/frontend/owcompare/.eslintrc.json
+++ b/frontend/owcompare/.eslintrc.json
@@ -41,7 +41,8 @@
     "no-unused-expressions": [
       2,
       {
-        "allowTaggedTemplates": true
+        "allowTaggedTemplates": true,
+        "allowTernary": true
       }
     ],
     "no-param-reassign": [
