--- a/frontend/owcompare/package.json
+++ b/frontend/owcompare/package.json
@@ -11,7 +11,8 @@
     "react": "^16.4.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.4.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "styled-components": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
