--- a/frontend/owcompare/package.json
+++ b/frontend/owcompare/package.json
@@ -9,9 +9,10 @@
     "prettier": "^1.13.5",
     "prop-types": "^15.6.1",
     "react": "^16.4.0",
-    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.4.0",
     "react-router-dom": "^4.2.2",
+    "react-smooth-scrollbar": "^8.0.6",
+    "smooth-scrollbar": "^8.2.7",
     "styled-components": "^3.3.2"
   },
   "scripts": {
