--- a/frontend/owcompare/package.json
+++ b/frontend/owcompare/package.json
@@ -9,7 +9,8 @@
     "react-router-dom": "^4.2.2",
     "react-smooth-scrollbar": "^8.0.6",
     "smooth-scrollbar": "^8.2.7",
-    "styled-components": "^3.3.2"
+    "styled-components": "^3.3.2",
+    "styled-reset": "^1.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
