--- a/frontend/owcompare/package.json
+++ b/frontend/owcompare/package.json
@@ -14,26 +14,20 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "watch": "concurrently --names \"webpack, stylus\" --prefix name \"npm run start\" \"npm run styles:watch\"",
     "build": "react-scripts build",
-    "eject": "react-scripts eject",
-    "styles": "stylus -u autoprefixer-stylus ./src/css/style.styl -o ./src/css/style.css",
-    "styles:watch": "stylus -u autoprefixer-stylus -w ./src/css/style.styl -o ./src/css/style.css"
+    "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "autoprefixer-stylus": "^0.14.0",
     "babel-eslint": "^7.2.3",
-    "concurrently": "^3.5.1",
     "eslint": "^4.19.1",
-    "eslint-plugin-flowtype": "^2.46.3",
-    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-airbnb": "^17.0.0",
     "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-flowtype": "^2.46.3",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-prettier": "^2.6.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-react": "^7.10.0",
     "prettier": "^1.13.5",
-    "nib": "^1.1.2",
-    "react-scripts": "^1.1.4",
-    "stylus": "^0.54.5"
+    "react-scripts": "^1.1.4"
   }
 }
